examples/test/testpolicy12007.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12007
  namespace: namespace170
spec:
  podSelector:
    matchLabels:
      key4: value44
      key30: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value46
          key39: value28
      podSelector:
        matchLabels:
          key38: value27
